[package]
name = "jindisksetup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}

ring = "0.16"
data-encoding = "2.3.2"

nix = "0.26"
devicemapper = "0.33"

derive_more = "0.99"